--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,11 @@
 Package: gwSPADE
-Title: gwSPADE: Gene Frequency-weighted Reference-free Deconvolution in Spatial Transcriptomics
-Version: 0.1.0
+Title: What the Package Does (One Line, Title Case)
+Version: 0.0.0.9000
 Authors@R: 
-    person("Aoqi", "Xie", , "xieaoqi@msu.com", role = c("aut", "cre"))
-Description: Latent Dirichlet Allocation model with Weighting Schemes, 
-	     which is used in cell type deconvolution.
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: Rcpp, RcppEigen
-LinkingTo: Rcpp, RcppEigen
