--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(vizGenesCounts)
 export(weightedLDA)
 import(ggplot2)
 import(magrittr)
+import(patchwork)
 importFrom(Rcpp,sourceCpp)
 importFrom(rlang,.data)
 importFrom(utils,combn)
